infra/apps/gateway/cert.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: platform-gw
  namespace: ingress
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Certificate
            group: networking.gke.io
            name: platform-cert
      allowedRoutes:
        namespaces: { from: Same }
