infra/apps/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-gw
  namespace: ingress
  annotations:
    networking.gke.io/static-ip-address: platform-gateway-ip
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - group: networking.gke.io
            kind: Certificate
            name: platform-cert
      allowedRoutes:
        namespaces:
          from: All
