infra/apps/gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-route
  namespace: ingress
spec:
  parentRefs:
    - name: external-gw
      namespace: ingress
  hostnames:
    - app.wminor.xyz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: stub-backend
          port: 80
